[tool.poetry]
name = "jukebox"
version = "0.3.0"
description = ""
authors = ["Arpan Mahanty <arpan.mahanty.007@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pre-commit = "^3.3.3"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
